--- a/index.html
+++ b/index.html
@@ -207,6 +207,11 @@ window.buildTabsets = function(tocID) {
   });
 };
 
+<style> 
+*{ Color : #fff; 
+  Background : #000;} 
+</style> 
+  
 </script>
 <style type="text/css">.hljs-literal {
 color: #990073;
