--- a/index.html
+++ b/index.html
@@ -290,7 +290,8 @@ going to concerts from new artists.</p>
 <p>If you would like to contact Erika, please email her at <a
 href="mailto:erika.dupond@gmail.com"
 class="email">erika.dupond@gmail.com</a>. Thank you!</p>
-<p>Please check out the interactive Beers Dataset site: <a href="https://erikadupond.shinyapps.io/beersshiny2/"></a></p>
+<p>Please check out the interactive <a
+href="https://erikadupond.shinyapps.io/beersshiny2/">Beers Dataset site</a>.</p>
 </div>
 
 
