--- a/index.html
+++ b/index.html
@@ -249,6 +249,9 @@ $(document).ready(function () {
 <li>
   <a href="CaseStudy1-Final.html">Beers Case Study</a>
 </li>
+<li>
+  <a href="CaseStudy2Final.html">FritoLay Workforce Case Study</a>
+</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         
