--- a/index.html
+++ b/index.html
@@ -295,6 +295,8 @@ href="mailto:erika.dupond@gmail.com"
 class="email">erika.dupond@gmail.com</a>. Thank you!</p>
 <p>Please check out the interactive <a
 href="https://erikadupond.shinyapps.io/beersshiny2/">Beers Dataset site</a>.</p>
+<p>Please check out the interactive <a
+href="https://erikadupond.shinyapps.io/ShinyApp_for_CaseStudy2/">Workforce Dataset site</a>.</p>
 </div>
 
 
