--- a/index.html
+++ b/index.html
@@ -296,7 +296,8 @@ class="email">erika.dupond@gmail.com</a>. Thank you!</p>
 <p>Please check out the interactive <a
 href="https://erikadupond.shinyapps.io/beersshiny2/">Beers Dataset site</a>.</p>
 <p>Please check out the interactive <a
-href="https://erikadupond.shinyapps.io/ShinyApp_for_CaseStudy2/">Workforce Dataset site</a>.</p>
+href="https://erikadupond.shinyapps.io/ShinyApp_for_CaseStudy2/">Workforce Dataset site</a> and my <a
+href="https://www.youtube.com/watch?v=an8WTrA9tRo&ab">Youtube presentation</a></p>
 </div>
 
 
